--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,7 +88,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5632]
+[INFO]  [/sys/router] main memory [total=>5376]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
@@ -130,8 +130,8 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router] mqtt boot config dropped
 [INFO]  [/mnt/bus] mapping /bus==>//io
 [INFO]  [/sys/router] bus /mnt/bus spanning /bus/# mounted
-[INFO]  [/sys/router] /io/console obj loaded
 [INFO]  [/io/console] thread spawned: inst()[cpp]
+[INFO]  [/sys/router] /io/console obj loaded
 [INFO]  [/sys/router] console boot config dropped
 ----
 
@@ -183,10 +183,12 @@ The [.h]#scheduler# controls and provides access to the various *processes* that
 fhatos> */sys/scheduler
 =>[
 ==>thread=>[
-===>/io/console
 =>]
 ==>config=>[
 ===>def_stack_size=>8096
+=>]
+==>::=>[
+===>spawn=>spawn?obj<=obj{?}(thread=>_)[cpp]
 =>]
 =>]@/sys/scheduler
 ----
@@ -532,7 +534,7 @@ The abstract syntax of a sugar-free `obj` is
 
 [stem]
 ++++
-\texttt{obj} := \texttt{type}(\texttt{frame})[\texttt{value}]@\texttt{ref}
+\tt{obj} := \tt{type}(\tt{frame})[\tt{value}]@\tt{ref}
 ++++
 
 . The [.h]#type# is a fURI referring to an `obj` which determines whether the `obj` is of that type or not (_predicate_).
@@ -753,15 +755,34 @@ fhatos>
 --
 ====
 
-When an mmADT base type is wrapped in a latexmath:[\texttt{type}[\]]-bracket, the type is first resolved to it's `obj` form (typically as an `inst`) and then the `obj` is applied to it.
+When an mmADT `obj` is wrapped in a `type[]`-bracket, the type fURI is first resolved to it's `obj` form (typically as an `inst`) and then the wrapped `obj` is applied to it.
 If the result of the application yields an `error` or a `noobj`, then the base value `obj` is not of that type and a type `error` is thrown.
-However, should any other `obj` be returned, then the base value `obj` is of that type and is returned wrapped in the respective latexmath:[\texttt{type}[\]]-bracket.
-The type can be understood as a predicate, where an `error` or `noobj` is `false`, otherwise `true`.
-Finally, if the `obj` has a latexmath:[\texttt{@}]-reference, then any subsequent mutations to that `obj` must continue to satisfy the constraints of the type.
-If any mutation falls outside the bounds of the type, a type `error` is thrown.
-The `@`-reference ensures that as the `obj` mutates, it's corresponding representation in the underlying fURI structure mutates as well.
+However, should any other `obj` be returned, then the base value `obj` is of that type and is returned wrapped in the respective `type[]`-bracket.
 
-These concepts are demonstrated in the examples below using the generally useful types off the `/mmadt/ext` prefix.
+[.center]
+[stem]
+++++
+\[
+\begin{align*}
+\tt{type}_\tt{furi}[\tt{obj}]          &= \;  \\
+\tt{type}_\tt{furi}[\tt{obj}]          &= \; ^*\tt{type}_\tt{furi} \cdot \tt{obj} \\
+\tt{type}_\tt{furi}[\tt{obj}]          &= \; \tt{type}_\tt{obj}    \cdot \tt{obj}  \\
+\tt{type}_\tt{furi}[\tt{obj}]          &= \; \left\{
+  \begin{array}{lr}
+        \tt{error}                      & \text{if} \; \tt{type}_\tt{obj}(\tt{obj}) \in \{\tt{error}, \tt{noobj}\} \\
+        \tt{type}_\tt{furi}[\tt{obj}]   & \text{otherwise}.
+  \end{array}\right\}
+\end{align*}
+\]
+++++
+
+The type can be understood as a https://en.wikipedia.org/wiki/Boolean-valued_function[predicate], where an `error` or `noobj` is `false`, otherwise `true`.
+Finally, if the `obj` has a `@`-reference, then any subsequent mutations to that `obj` must continue to satisfy the constraints of the type.
+If any mutation falls outside the bounds of the type, a type `error` is thrown.
+The `@`-reference ensures that as the referenced `obj` mutates, it's corresponding representation in the underlying fURI structure mutates as well.
+This captures the notion of https://en.wikipedia.org/wiki/Evaluation_strategy#Call_by_reference[pass-by-reference] vs. https://en.wikipedia.org/wiki/Evaluation_strategy#Call_by_value[pass-by-value].
+
+The mechanics of `obj` typing are exemplified below using the generally useful types provided the `/mmadt/ext` prefix.
 
 ++++
 <!-- 🐖 ./main_runner.out "*/mmadt/ext/#/" -->
@@ -796,9 +817,9 @@ fhatos> */mmadt/ext/#/
 char::
 +
 --
+A https://en.wikipedia.org/wiki/Character_(computing)[char] is a `str` containing a single character.
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .char icon:link[link=https://en.wikipedia.org/wiki/Character_(computing),2x,role=blue]
 *char
 char['a']@a
 char['b']@b
@@ -808,7 +829,6 @@ char['b']@b
 -->
 ++++
 
-.char icon:link[link=https://en.wikipedia.org/wiki/Character_(computing),2x,role=blue]
 [source,mmadt]
 ----
 fhatos> *char
@@ -834,9 +854,9 @@ fhatos> @a.as(str) + @b
 nat::
 +
 --
+A https://en.wikipedia.org/wiki/Natural_number[natural number] is an element of the set latexmath:[\mathbb{N} = \{0,1,2,\ldots,\infty\}].
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .nat icon:link[link=https://en.wikipedia.org/wiki/Natural_number,2x,role=blue]
 *nat
 nat[12]
 nat[-30]
@@ -847,7 +867,6 @@ nat[12]@a
 -->
 ++++
 
-.nat icon:link[link=https://en.wikipedia.org/wiki/Natural_number,2x,role=blue]
 [source,mmadt]
 ----
 fhatos> *nat
@@ -874,9 +893,9 @@ fhatos> *a
 celsius::
 +
 --
+https://en.wikipedia.org/wiki/Celsius[Celsius] is a temperature metric ranging from https://en.wikipedia.org/wiki/Absolute_zero[absolute zero] (-273.15&#176;) to infinity.
 ++++
 <!-- 🐖 ./main_runner.out
-[HEADER] .celsius icon:link[link=https://en.wikipedia.org/wiki/Celsius,2x,role=blue]
 *C
 C[0.0]
 C[274.0]
@@ -884,7 +903,6 @@ C[-274.0]
 -->
 ++++
 
-.celsius icon:link[link=https://en.wikipedia.org/wiki/Celsius,2x,role=blue]
 [source,mmadt]
 ----
 fhatos> *C
@@ -904,13 +922,11 @@ fhatos> C[-274.0]
 
 ====
 
-
 ==== The Frame
 
 ==== The Value
 
 ==== The Reference
-
 
 Examples of the aforementioned types are provided below.
 
@@ -1652,8 +1668,6 @@ Every mmADT `obj` is typed.
 A type is an mmADT `obj`.
 A `obj` can serve as a value in one situation and as a type in another.
 Types can be typed.
-
-
 
 ===== Bytecode and Instruction Types
 
