--- a/docs/macros.tex
+++ b/docs/macros.tex
@@ -1,8 +1,8 @@
 [env.texmacro]
 --
 \def\Bool{\mathbb{B}}
-
 \def{\mb}{\mathbb}
 \newcommand{\set}[1]{ \{\,#1\,  \} }
 \newcommand{\sett}[2]{ \{\,#1\, \mid\, #2\, \} }
+\newcommand{\tt[1]}{\texttt\{#1\}}
 --
