--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -92,12 +92,12 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
-[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 795 bytes)
+[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 797 bytes)
 [INFO]  [/sys/router] 
   [
     router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
     scheduler=>[def_stack_size=>8096]
-    mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true,max_size=>50]
+    mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,async=>true,cache_size=>50]
     wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
     ota=>[host=>mdns://fhatos_client:3232]
     console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]
@@ -125,7 +125,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router] fs /mnt/disk spanning /disk/# mounted
 [INFO]  [/sys/router] fs boot config dropped
 [INFO]  [/mnt/dsm] query processor /mnt/dsm/ attached
-[INFO]  [/mmadt/rec] mqtt://chibi.local:1883 mqtt fhatos_client connected
+[ERROR] [/mmadt/rec] unable to connect to mqtt://chibi.local:1883: MQTT error [-1]: TCP/TLS connect failure
 [INFO]  [/sys/router] dsm /mnt/dsm spanning /shared/# mounted
 [INFO]  [/sys/router] mqtt boot config dropped
 [INFO]  [/mnt/bus] mapping /bus==>//io
@@ -181,7 +181,7 @@ The [.h]#scheduler# controls and provides access to the various *processes* that
 [source,mmadt]
 ----
 fhatos> */sys/scheduler
-=>[
+>[
 ==>thread=>[
 =>]
 ==>config=>[
@@ -190,7 +190,7 @@ fhatos> */sys/scheduler
 ==>::=>[
 ===>spawn=>spawn?obj<=obj{?}(thread=>_)[cpp]
 =>]
-=>]@/sys/scheduler
+>]@/sys/scheduler
 ----
 
 ++++
@@ -213,7 +213,7 @@ The [.h]#router# is responsible for storing and retrieving `objs` from a pool of
 [source,mmadt]
 ----
 fhatos> */sys/router
-=>[
+>[
 ==>structure=>[
 ===>/sys/#
 ===>/mnt/#
@@ -263,7 +263,7 @@ fhatos> */sys/router
 ====>sub=>sub?obj{?}<=obj()[cpp]
 ==>]
 =>]
-=>]@/sys/router
+>]@/sys/router
 ----
 
 ++++
@@ -282,11 +282,12 @@ The [.h]#mmADT# language is embedded in the fURI address space thus enabling htt
 [source,mmadt]
 ----
 fhatos> */mmadt/#/
-=>[
+>[
 ==>/mmadt/a=>a(_)[cpp]
 ==>/mmadt/apply=>apply?obj{*}<=obj(rhs=>noobj,args=>[=>])[cpp]
 ==>/mmadt/as=>as(isa(/mmadt/uri))[cpp]
 ==>/mmadt/at=>at?obj{?}<=obj{?}(isa(/mmadt/uri))[cpp]
+==>/mmadt/back=>back?obj{?}<=obj()[cpp]
 ==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(_)[cpp]
 ==>/mmadt/bcode=>[bcode][_]
 ==>/mmadt/bcode/::/mmadt/inspect=>inspect(isa(/mmadt/bool))[cpp]
@@ -347,6 +348,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/int/::/mmadt/plus=>plus(isa(/mmadt/int))[cpp]
 ==>/mmadt/is=>is?obj{?}<=obj(_)[cpp]
 ==>/mmadt/isa=>isa?obj{?}<=obj(_)[cpp]
+==>/mmadt/jump=>jump?obj{?}<=obj(isa(/mmadt/uri))[cpp]
 ==>/mmadt/lift=>lift(_)[cpp]
 ==>/mmadt/lock=>lock(user=>_)[cpp]
 ==>/mmadt/lshift=>lshift()
@@ -389,6 +391,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/real/::/mmadt/plus=>plus(isa(/mmadt/real))[cpp]
 ==>/mmadt/rec=>[rec][_]
 ==>/mmadt/rec/::/mmadt/div=>div(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/each=>each(isa(/mmadt/rec))[cpp]
 ==>/mmadt/rec/::/mmadt/inspect=>inspect(isa(/mmadt/rec))[cpp]
 ==>/mmadt/rec/::/mmadt/lshift=>lshift(isa(/mmadt/int))[cpp]
 ==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec()[cpp]
@@ -433,7 +436,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/uri/::/mmadt/plus=>plus(isa(/mmadt/uri))[cpp]
 ==>/mmadt/uri/::/mmadt/rshift=>rshift(isa(/mmadt/int))[cpp]
 ==>/mmadt/within=>within(_)
-=>]
+>]
 ----
 
 ++++
@@ -494,23 +497,9 @@ A [yellow]#f#​[fuchsia]#h#​[aqua]*A*​[lime]*T*​[red]*O*​[blue]#s#​ i
 [source,mmadt]
 ----
 fhatos> # -> noobj
-[ERROR] [/sys/router] # crosses multiple structures
-[INFO]  [/sys/router] 1 bus(s) closing
-[INFO]  [/sys/router] 1 dsm(s) closing
-[INFO]  [/sys/router] 1 fs(s) closing
-[INFO]  [/sys/router] 7 heap(s) closing
-[INFO]  [/mmadt/rec] disconnecting from [mqtt://chibi.local:1883]
-[INFO]  [/sys/router] router /sys/router stopped
-[INFO]  [/sys/router] /sys/# heap detached
-[INFO]  [/sys/router] /mnt/# heap detached
-[INFO]  [/sys/router] /boot/# heap detached
-[INFO]  [/sys/router] /fos/# heap detached
-[INFO]  [/sys/router] /mmadt/# heap detached
-[INFO]  [/sys/router] /io/# heap detached
-[INFO]  [/sys/router] +/# heap detached
-[INFO]  [/sys/router] /disk/# fs detached
-[INFO]  [/sys/router] /shared/# dsm detached
-[INFO]  [/sys/router] /bus/# bus detached
+[ERROR] [/sys/scheduler] [/mmadt/noobj] noobj accessed as bool
+	  thrown at inst # => ref?obj{?}<=obj{?}(true)[cpp] [1=>true]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'# -> noobj')[cpp] [code=>'# -> noobj']
 ----
 
 ++++
@@ -521,7 +510,7 @@ This documentation will explore these three kernel resources in-depth starting w
 
 === The mm-ADT Language
 
-mmADT is the programming language of [red]#F#​[fuchsia]#H#​[lime]#a#​[aqua]*T*​[yellow]*O*​[blue]#s#​. In mmADT, every expression is an `obj` (object). The language has an
+image:ansi/punky.png[width=250,float=left,role=title=submarine] mmADT is the programming language of [red]#F#​[fuchsia]#H#​[lime]#a#​[aqua]*T*​[yellow]*O*​[blue]#s#​. In mmADT, every expression is an `obj` (object). The language has an
 underlying https://en.wikipedia.org/wiki/Monoid_(category_theory)[monoidal] structure where an `obj` can be applied (`.`) to an `obj` to create an `obj`.
 
 [.center]
@@ -534,7 +523,7 @@ digraph g {
  obj -> obj [label=obj,fontcolor=fuchsia,color=white];
 }
 ----
-
+⠀⠀
 An `obj` is composed of a [.h]#type#, a [.h]#value#, a variable [.h]#frame#, and a storage location/[.h]#reference#.
 The abstract syntax of a sugar-free `obj` is
 
@@ -748,6 +737,8 @@ noobj::
 <!-- 🐖 ./main_runner.out
 /mmadt/noobj[]
 noobj[]
+noobj
+
 
 -->
 ++++
@@ -756,6 +747,9 @@ noobj[]
 ----
 fhatos> /mmadt/noobj[]
 fhatos> noobj[]
+fhatos> noobj
+fhatos> 
+
 fhatos> 
 
 ----
@@ -793,7 +787,7 @@ If any mutation falls outside the bounds of the type, a type `error` is thrown.
 The `@`-reference ensures that as the referenced `obj` mutates, it's corresponding representation in the underlying fURI structure mutates as well.
 This captures the notion of https://en.wikipedia.org/wiki/Evaluation_strategy#Call_by_reference[pass-by-reference] vs. https://en.wikipedia.org/wiki/Evaluation_strategy#Call_by_value[pass-by-value].
 
-The mechanics of `obj` typing are exemplified below using the generally useful types provided the `/mmadt/ext` prefix.
+The mechanics of `obj` typing are exemplified below using the generally useful types provided by the `/mmadt/ext` prefix.
 
 ++++
 <!-- 🐖 ./main_runner.out "*/mmadt/ext/#/" -->
@@ -802,7 +796,7 @@ The mechanics of `obj` typing are exemplified below using the generally useful t
 [source,mmadt]
 ----
 fhatos> */mmadt/ext/#/
-=>[
+>[
 ==>/mmadt/ext/C=>C()[is(gte(-273.149994))]
 ==>/mmadt/ext/Ox=>Ox()[is(true)]
 ==>/mmadt/ext/char=>char()[merge(2).count().is(eq(1))]
@@ -817,7 +811,7 @@ fhatos> */mmadt/ext/#/
 ==>/mmadt/ext/secret=>[str][_]
 ==>/mmadt/ext/secret/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
 ==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
-=>]
+>]
 ----
 
 ++++
@@ -850,7 +844,8 @@ fhatos> char['a']@a
 fhatos> char['b']@b
 ==>char['b']@b
 fhatos> @a + @b
-[ERROR] [/sys/scheduler] [/sys/type] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/int as defined by [int][_] 
+	  thrown at inst 'aa'@a => char()[merge(2).count().is(eq(1))] [0=>char['a']@a]
 	  thrown at inst char['a']@a => plus(at(b))[cpp] [0=>char['a']@a]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + @b')[cpp] [code=>'@a + @b']
 fhatos> *a
@@ -887,14 +882,16 @@ fhatos> *nat
 fhatos> nat[12]
 ==>nat[12]
 fhatos> nat[-30]
-[ERROR] [/sys/scheduler] [/sys/type] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/int as defined by [int][_] 
+	  thrown at inst -30 => nat()[is(gte(0))] [code=>'nat[-30]']
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[-30]')[cpp] [code=>'nat[-30]']
 fhatos> nat[12]@a
 ==>nat[12]@a
 fhatos> @a.minus(11)
 ==>nat[1]@a
 fhatos> @a.minus(2)
-[ERROR] [/sys/scheduler] [/sys/type] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/int as defined by [int][_] 
+	  thrown at inst -1@a => nat()[is(gte(0))] [0=>2]
 	  thrown at inst nat[1]@a => minus(2)[cpp] [0=>2]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.minus(2)')[cpp] [code=>'@a.minus(2)']
 fhatos> *a
@@ -927,7 +924,8 @@ fhatos> C[0.0]
 fhatos> C[274.0]
 ==>C[274]
 fhatos> C[-274.0]
-[ERROR] [/sys/scheduler] [/sys/type] -274.000000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.149994))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/real as defined by [real][_] 
+	  thrown at inst -274.000000 => C()[is(gte(-273.149994))] [code=>'C[-274.0]']
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'C[-274.0]')[cpp] [code=>'C[-274.0]']
 ----
 
@@ -1061,11 +1059,11 @@ fhatos> thread[[
           loop=>from(a,0).plus(1).to(a).is(gt(10)).true.to(/abc/halt),
           halt=>false,
           delay=>nat[0]]]@abc
-=>thread[
+>thread[
 ==>loop=>from(a,0).plus(1).to(a).is(gt(10)).map(true).to(/abc/halt)
 ==>halt=>false
 ==>delay=>nat[0]
-=>]@abc
+>]@abc
 ----
 
 ++++
@@ -1074,8 +1072,6 @@ fhatos> thread[[
 --
 
 ====
-
-
 
 
 .Controlling Base Value Bit Encoding
@@ -1134,19 +1130,19 @@ a -> int8[126]                       --- <2>
 ----
 fhatos> /sys/router/config/resolve/auto_prefix ->
           *(_) + \|[/mmadt/ext/]             // <1>
-=>[
-===>
-===>/mmadt/
-===>/mmadt/ext/
-===>/fos/
-===>/fos/sys/
-===>/fos/io/
-===>/fos/sensor/
-===>/fos/ui/
-===>/fos/util/
-===>/sys/
-===>/mmadt/ext/
-=>]
+>[
+==>
+==>/mmadt/
+==>/mmadt/ext/
+==>/fos/
+==>/fos/sys/
+==>/fos/io/
+==>/fos/sensor/
+==>/fos/ui/
+==>/fos/util/
+==>/sys/
+==>/mmadt/ext/
+>]
 fhatos> a -> int8[126]                       // <2>
 ==>int8[126]
 fhatos> @a + 1
@@ -1154,7 +1150,8 @@ fhatos> @a + 1
 fhatos> @a + 1
 ==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/scheduler] [/sys/type] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/int as defined by [int][_] 
+	  thrown at inst 129@a => uint8()[is(gte(-127)).is(lte(128))] [0=>1]
 	  thrown at inst int8[128]@a => plus(1)[cpp] [0=>1]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + 1                               // <3>')[cpp] [code=>'@a + 1                               // <3>']
 ----
@@ -1394,12 +1391,12 @@ For example, see how the internal `objs` if a `lst` are effected by the applicat
 [source,mmadt]
 ----
 fhatos> 2.lst[[1,plus(2),mult(plus(3)),'a']]
-=>[
-===>1
-===>4
-===>10
-===>'a'
-=>]
+>[
+==>1
+==>4
+==>10
+==>'a'
+>]
 ----
 
 ++++
@@ -1439,9 +1436,9 @@ However, what makes
 [source,mmadt]
 ----
 fhatos> 2.rec[[is(gt(2)) => plus(2), _ => 0]]
-=>[
+>[
 ==>2=>0
-=>]
+>]
 ----
 
 ++++
@@ -1791,12 +1788,14 @@ fhatos> /type/int/nat -> |is(gt(0))
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
-[ERROR] [/sys/scheduler] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/int as defined by [int][_] 
+	  thrown at inst -6 => nat()[is(gte(0))] [code=>'nat[-6]']
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[-6]')[cpp] [code=>'nat[-6]']
 fhatos> nat[3].plus(2)
 ==>nat[5]
 fhatos> nat[3].mult(-2)
-[ERROR] [/sys/scheduler] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a /mmadt/int as defined by [int][_] 
+	  thrown at inst -6 => nat()[is(gte(0))] [0=>-2]
 	  thrown at inst nat[3] => mult(-2)[cpp] [0=>-2]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[3].mult(-2)')[cpp] [code=>'nat[3].mult(-2)']
 ----
@@ -1852,7 +1851,7 @@ The function of the router is to:
 fhatos> /io/console/config/nest->3
 ==>3
 fhatos> */sys/router/#/
-=>[
+>[
 ==>/sys/router=>[
 ===>structure=>[
 ====>/sys/#
@@ -1874,7 +1873,7 @@ fhatos> */sys/router/#/
 ====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
 ==>]
 =>]@/sys/router
-=>]
+>]
 ----
 
 ++++
@@ -1943,7 +1942,7 @@ It's in the structures where the heavily lifting of the memory operations takes 
 
 ==== Structure Reading and Writing
 
-Every structure supports 2 primary operations:
+image:ansi/submarine.png[width=250,float=right,role=img-pad,title=submarine] Every structure supports 2 primary operations:
 
 [.center]
 [cols="2,2",width=75%]
@@ -2037,30 +2036,29 @@ fhatos> a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
 fhatos> *a/b            // <1>
 ==>2
 fhatos> *a/b/           // <2>
-=>[
-==>a/b/c=>3
-==>a/b/d=>4
-=>]
+>[
+==>a/b=>2
+>]
 fhatos> *a/+            // <3>
 ==>1
 ==>2
 fhatos> *a/+/           // <4>
-=>[
-==>a/b/c=>3
-==>a/b/d=>4
-=>]
+>[
+==>a/a=>1
+==>a/b=>2
+>]
 fhatos> *a/#            // <5>
 ==>1
 ==>2
 ==>3
 ==>4
 fhatos> *a/#/           // <6>
-=>[
+>[
 ==>a/a=>1
 ==>a/b=>2
 ==>a/b/c=>3
 ==>a/b/d=>4
-=>]
+>]
 ----
 
 ++++
